# nlb_tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
examples/baselines/autolfads/: README.md  lfads_data_prep.py  post_lfads_prep.py  run_lfads.py
examples/baselines/autolfads/config/: area2_bump.yaml  area2_bump_20.yaml  dmfc_rsg.yaml  dmfc_rsg_20.yaml  mc_maze.yaml  mc_maze_20.yaml  mc_maze_large.yaml  mc_maze_large_20.yaml  mc_maze_medium.yaml  mc_maze_medium_20.yaml  mc_maze_small.yaml  mc_maze_small_20.yaml  mc_rtt.yaml  mc_rtt_20.yaml
examples/baselines/gpfa/: README.md  gpfa_cv_sweep.py  run_gpfa.py
examples/baselines/ndt/: README.md
examples/baselines/slds/: README.md  run_slds.py  run_slds_randsearch.py
examples/baselines/smoothing/: README.md  run_smoothing.py  smoothing_cv_sweep.py
examples/dataset_demos/: area2.ipynb  dmfc.ipynb  maze.ipynb  rtt.ipynb
examples/tutorials/: basic_example.ipynb  gpfa_example.ipynb  slds_example.ipynb
nlb_tools/: chop.py  evaluation.py  make_tensors.py  nwb_interface.py
tests/: conftest.py  test_evaluate.py  test_make_tensors.py  test_nlb.py  test_nwb_interface.py
